# pronto-client

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEBT_REPORT.md  Dockerfile  FUNCTIONALITY_IMPROVEMENTS.md  MENU_STRUCTURE.md  Makefile  POSTGRES.md  README.md  SECURITY_VALIDATORS.md  TESTING.md  UI_QA_REPORT.md  UX_IMPLEMENTATION_GUIDE.md  docker-compose.yml  nginx-reverse-proxy-with-fallback.conf  nginx-reverse-proxy.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pronto-containers.service  pyproject.toml  requirements-dev.txt  requirements.txt  skillkit.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/skills/app-store-optimization/: ab_test_planner.py  aso_scorer.py  competitor_analyzer.py  keyword_analyzer.py  launch_checklist.py  localization_helper.py  metadata_optimizer.py  review_analyzer.py
.github/skills/i18n-localization/scripts/: i18n_checker.py
.github/skills/prompt-engineer/: SKILL.md
.github/skills/rag-implementation/: SKILL.md
.github/skills/senior-architect/scripts/: architecture_diagram_generator.py  dependency_analyzer.py  project_architect.py
.github/skills/senior-fullstack/scripts/: code_quality_analyzer.py  fullstack_scaffolder.py  project_scaffolder.py
.github/skills/shopify-development/scripts/: shopify_graphql.py  shopify_init.py
.github/skills/stripe-integration/: SKILL.md
.github/skills/typescript-expert/references/: tsconfig-strict.json
.github/skills/typescript-expert/scripts/: ts_diagnostic.py
.mcp/: .env.example  README.md  config.json  start-chrome-mcp.sh
config/: secrets.env.example
src/: test-setup.ts  verify_backend_fix.py  verify_order_7.py  verify_qa_container.py
src/api_app/: Dockerfile  app.py
src/clients_app/: Dockerfile  app.py
src/clients_app/routes/: __init__.py  web.py
src/clients_app/routes/api/: __init__.py  business_info.py  debug.py  feedback.py  notifications.py  orders.py  sessions.py  shortcuts.py  stripe_payments.py  waiter_calls.py
src/clients_app/services/: __init__.py  order_service.py
src/clients_app/static/css/: color-improvements.css  main-ux.css  main.css  menu-checkout.css  menu-components.css  menu-core.css  menu-modals.css  menu.css  qa-error-fixes-updated.css  styles.css
src/clients_app/templates/: base.html  checkout.html  error.html  thank_you.html
src/employees_app/: Dockerfile  app.py  decorators.py  requirements.txt
src/employees_app/routes/: __init__.py  api_legacy.py  api_scoped.py  auth.py  dashboard.py  roles.py
src/employees_app/routes/admin/: __init__.py  auth.py
src/employees_app/routes/api/: __init__.py  admin_config.py  analytics.py  areas.py  auth.py  branding.py  config.py  (+21 more)
src/employees_app/services/: __init__.py
src/employees_app/templates/: admin_shortcuts.html  analytics.html  authorization_error.html  base.html  branding.html  business_config.html  console_selector.html  dashboard.html  dashboard_admin.html  dashboard_cashier.html  dashboard_chef.html  dashboard_system.html  dashboard_waiter.html  error.html  error_catalog.html  feedback_dashboard.html  login.html  login_admin.html  login_cashier.html  login_chef.html  login_system.html  login_waiter.html  order_detail.html  roles_management.html  system_order_status_labels.html  system_reauth_confirm.html  system_reauth_redirect.html
src/pronto-client/: Dockerfile  __init__.py  app.py  requirements.txt
src/pronto-client/routes/: web.py
src/pronto-client/services/: menu_service.py  order_service.py
src/pronto-client/templates/: base.html  checkout.html.backup  debug_panel.html  feedback.html  index-alt.html  index.html
src/pronto_clients/: Dockerfile  app.py  requirements.txt
src/pronto_clients/routes/: web.py
src/pronto_clients/services/: menu_service.py  order_service.py
src/pronto_clients/templates/: auth.html  base.html  checkout.html  checkout.html.backup  debug_panel.html  feedback.html  index-alt.html  index.html  kiosk.html  privacy_policy.html  terms_of_service.html  thank_you.html
src/pronto_clients/utils/: api_client.py  customer_session.py  input_sanitizer.py
src/shared/: __init__.py  audit_middleware.py  config.py  constants.py  datetime_utils.py  db.py  error_catalog.py  error_handlers.py  extensions.py  jwt_middleware.py  jwt_service.py  logging_config.py  models.py  notification_stream_service.py  permissions.py  psycopg2_patch.py  schemas.py  scope_guard.py  security.py  security_middleware.py  serializers.py  socketio_manager.py  table_utils.py  validation.py
src/shared/auth/: __init__.py  service.py
src/shared/migrations/: 010_add_super_admin_handoff_and_audit.sql
src/shared/orchestrator/: README.md  __init__.py  classifier.py  cli.py  config.py  memory.py  ollama_client.py  orchestrator.py  router.py
src/shared/services/: __init__.py  ai_image_service.py  analytics_service.py  area_service.py  auth_service.py  business_config_service.py  business_info_service.py  cancel_order_service.py  custom_role_service.py  customer_service.py  day_period_service.py  email_service.py  employee_service.py  enhanced_search_service.py  feedback_email_service.py  feedback_service.py  image_service.py  menu_service.py  menu_validation.py  notification_service.py  notifications.py  notifications_service.py  order_modification_service.py  order_service.py  order_state_machine.py  payments.py  price_service.py  recommendation_service.py  report_export_service.py  role_service.py  secret_service.py  seed.py  settings_service.py  status_label_service.py  ticket_pdf_service.py  waiter_call_service.py  waiter_table_assignment_service.py
src/shared/supabase/: realtime.py  storage.py
src/shared/templates/: _order_row.html  authorization_error.html  base.html  console_selector.html  debug_panel.html  login.html  login_admin.html  login_cashier.html  login_chef.html  login_waiter.html
src/static_content/: Dockerfile  nginx.conf
tests/: __init__.py  test_auth_api.py  test_business_info_api.py  test_orders_api.py  test_payments_api.py  test_web_auth_regressions.py
(+167 files in other folders)
